--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>g3 architect</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="work-sans-font">
     <header>
+        <nav class="navbar">
+            <h3 class="brand">SB Architect</h3>
+        </nav>
 
     </header>
     <main>
