--- a/index.html
+++ b/index.html
@@ -3,17 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>g3 architect</title>
+    <title>sb architect</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="work-sans-font">
-    <header>
-        <nav class="navbar">
+    <header class="bg-light">
+        <nav class="navbar display-flex">
             <h3 class="brand">SB Architect</h3>
+            <ul class="nav-links display-flex">
+                <li class="nav-item"><a href="" class="nav-link text-gray">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">Contact Us</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">Login</a></li>
+            </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-titel">Brand New Group of Architects </h1>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even </p>
+            <button class="btn-primary">Explore More</button> 
+            </div>
+            <img class="banner-image" src="images/banner.png" alt="">
+        </div>
 
     </header>
     <main>
+        <!-- team section start -->
+        <section class="teams display-flex">
+            <div class="team-img-conteiner">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+
+            </div>
+            <div class="our-features">
+                <h3 class="feature-title"> <span id="quick-list" class="text-light-gray">Quick list</span> <samp>of Our</samp> <samp class="text-primary">Features</samp></h3>
+                <p class="feature-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+
+        </section>
+        <!-- Features you will  -->
+         <section class="">
+
+         </section>
+
+         <!-- Some Facts -->
+
+         <section>
+            
+         </section>
+
+         9-5 Make Teams section responsive and shared CSS 
+         7:28
 
     </main>
     
