--- a/index.html
+++ b/index.html
@@ -86,6 +86,20 @@
                  </div>
             </div>
          </section>
+         <!-- Our Sponspors -->
+          <section class="our-sponsors">
+            <div class="sponsor-info">
+                <h3 class="section-title">Our Sponsors</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsors-companes">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+            </div>
+          </section>
 
          
 
