--- a/index.html
+++ b/index.html
@@ -45,9 +45,40 @@
 
         </section>
         <!-- Features you will  -->
-         <section class="">
 
-         </section>
+            <section class="feature display-flex">
+                <div>
+                    <h3 id="feature-section-title" class="section-title">Features you will <br> love & enjoy</h3>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <!-- feature card container -->
+                     <div class="feature-card">
+                        <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                     </div>
+                         <div class="feature-card">
+                            <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                            <div class="feature-card">
+                                <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                            </div>
+                                <div class="feature-card">
+                                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                                </div>
+
+                </div>
+                <div>
+                    <img src="images/architect.png" alt="">
+                    <button id="experience-badge" class="btn-primary">
+                        <span id="experience-years">10+Years</span>
+                        <br>
+                        <span>Experience</span>
+                    </button>
+                </div>
+            </section>
+         
 
          <!-- Some Facts -->
 
