--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </section>
         <!-- Features you will  -->
 
-            <section class="feature display-flex">
+            <section class="features display-flex">
                 <div>
                     <h3 id="feature-section-title" class="section-title">Features you will <br> love & enjoy</h3>
                     <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
@@ -69,7 +69,7 @@
                                 </div>
 
                 </div>
-                <div>
+                <div class="featured-architech">
                     <img src="images/architect.png" alt="">
                     <button id="experience-badge" class="btn-primary">
                         <span id="experience-years">10+Years</span>
